--- a/res/layout/term_activity.xml
+++ b/res/layout/term_activity.xml
@@ -16,7 +16,7 @@
 */
 -->
 
-<com.androidesk.term.TermViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
+<com.adblog.term.TermViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/view_flipper"
     android:layout_width="fill_parent" 
     android:layout_height="fill_parent"
